--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,14 @@ scratch/
 .env
 *.key
 credentials.*
+
+# Node / MCP Server
+node_modules/
+dist/
+coverage/
+.sessions/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.test-library/
